feat(plugin): 添加插件系统核心功能实现
- 修改WorkflowUtil工具类中的getFirst()调用为get(0)以兼容JDK版本
- 新增MySQL数据库表结构定义，包括插件信息表、实体类信息表、方法类信息表、方法信息表、参数信息表、工作流信息表、工作流节点表、节点关系表、条件表、数据映射表和节点默认值表
- 创建PluginMapper接口及对应的MyBatis XML映射文件，实现插件信息的增删改查功能
- 创建WorkflowMapper接口及对应的MyBatis XML映射文件，实现工作流信息的增删改查功能
- 配置完整的数据表关联关系和结果映射，支持插件、工作流及其相关组件的完整数据查询